<resources>
    <string name="app_name">AbxTest</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapsInv">Inv</string>
    <string name="mapsChar">Char</string>
    <string name="mapsNear">Near</string>
    <string name="mapsTracking">Tracking</string>
    <string name="mapNear_description">List of nearby things</string>
    <string name="charActivity_profileButton">Profile</string>
    <string name="charActivity_fighterButton">Fighter</string>
    <string name="charActivity_settingsButton">Settings</string>
    <string name="charActivity_helpButton">Help</string>
    <string name="inventoryActivity_description">Inventory Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
