<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_char"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abraxy.abxtest.CharActivity">

    <Button
        android:id="@+id/ProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onProfileButton"
        android:text="@string/charActivity_profileButton" />

    <Button
        android:id="@+id/FighterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ProfileButton"
        android:layout_below="@+id/ProfileButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onFighterButton"
        android:text="@string/charActivity_fighterButton" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:onClick="onSettingsButton"
        android:text="@string/charActivity_settingsButton"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="25dp"
        android:onClick="onHelpButton"
        android:text="@string/charActivity_helpButton" />
</RelativeLayout>
